# cs225_Grocery_Team

./: CMakeLists.txt  README.md  hw2.py
Project/: CMakeLists.txt
collision_demo/: simviz_demo.cpp  world.urdf
grocery_robot/: CMakeLists.txt  controller_demo.cpp  mmp_panda.urdf  mmp_panda_no_basket.urdf  simviz_demo.cpp  world.urdf
model/environments/construction/Drill2/: Drill2.mtl
model/environments/construction/Drill2_Full_Bolt/: Drill2_Full_Bolt.mtl
model/environments/construction/Drill_NoBolt/: drill_nobolt.mtl
model/grocery_models/cad/: aisle_shelf.SLDPRT  base_assem.SLDASM  base_collision.SLDPRT  caster.SLDPRT  caster_wheel.SLDPRT  egg_carton_collision.SLDPRT  grocery_container.SLDPRT  grocery_shelf.SLDPRT  shelf.SLDPRT  shelf_collision.SLDPRT
model/grocery_models/cad/aisle_shelf OBJ/: aisle_shelf.mtl
model/grocery_models/cad/milk_multideck_cabinet_with_curtain OBJ/: milk_multideck_cabinet_with_curtain.mtl
model/grocery_models/grocery_container OBJ/: grocery_container.blend  grocery_container.mtl
model/grocery_models/grocery_world/: aisle_shelf_collision.blend  aisle_shelf_collision.blend1  egg_carton_collision.blend  egg_shelf.blend  egg_shelf.blend1  egg_shelf_collision.blend  egg_shelf_collision.blend1  grocery_shelf.blend  grocery_shelf.blend1  grocery_shelf.mtl
model/grocery_models/mmp_two_arm_panda/: mmp_panda_two_arm_base.blend  mmp_panda_two_arm_base.blend1  mmp_panda_two_arm_base_collision.blend  mmp_panda_two_arm_base_collision.blend1  mmp_panda_two_arm_base_grocery_collision.blend  mmp_panda_two_arm_base_grocery_collision.blend1  mmp_panda_two_arm_base_grocery_collision2.blend  mmp_panda_two_arm_base_grocery_collision2.blend1  mmp_panda_two_arm_base_grocery_collision3.blend  mmp_panda_two_arm_base_grocery_collision3.blend1
model/objects/: basket.mtl  basket.urdf  checkout.mtl  floor.mtl  jar.mtl  jar.urdf  jar_shelf.mtl  jar_shelf_simulation.mtl  jar_shelf_simulation.urdf  milk.mtl  milk.urdf  milk_shelf.mtl  milk_shelf_simulation.mtl  milk_shelf_simulation.urdf  pasta.mtl  pasta.urdf  pasta_shelf.mtl  pasta_shelf_simulation.mtl  pasta_shelf_simulation.urdf  shelf.mtl  shelf.urdf  x_wall.mtl  y_wall.mtl
pickup_demo/: CMakeLists.txt  controller_demo.cpp  jar.urdf  mmp_panda.urdf  simviz_demo.cpp  test.py  world.urdf
(+30 files in other folders)
